--- a/41_2_Classificação_com_AutoML_PyCaret.ipynb
+++ b/41_2_Classificação_com_AutoML_PyCaret.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ5QOvPT4wopiEQ6OQJjQC",
+      "authorship_tag": "ABX9TyN07Q43sjDe8kvv50JU09zM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,31 @@
       ],
       "metadata": {
         "id": "MhGkEHoTmlT5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PROJETO REGRESSÃO\n",
+        "\n",
+        "Como falamos antes, nossos templates ficarão cada vez mais simples!!\n",
+        "\n",
+        "O objetivo deste projeto é desenvolver um projeto para classificar o estado de saúde de fetos em uma maternidade, com [esses dados do Kaggle](https://www.kaggle.com/andrewmvd/fetal-health-classification).\n",
+        "\n",
+        "Aqui, queremos, como sempre, trazer o máximo de autonomia e independência pra vocês. Façam o download, e disponibilizem os seus dados, carreguem eles aqui, e desenvolvam o projeto.\n",
+        "\n",
+        "## Objetivos\n",
+        "\n",
+        "* Adquirir e disponibilizar os dados\n",
+        "* Análise completa dos dados e do problema (Na mão, ou com Pandas Profiling, SweetViz, etc)\n",
+        "* Desenvolver uma solução de Machine Learning eficiente com PyCaret para Classificação\n",
+        "\n",
+        "LEMBREM-SE: Documentação, Storytelling, Artigo com Código!\n",
+        "\n",
+        "Mãos à obra e boa sorte!"
+      ],
+      "metadata": {
+        "id": "MnMc1M-fm0TZ"
       }
     },
     {
