--- a/41_4_[PROJETO]_Previsão_de_Demanda_(Time_Series_Forecasting).ipynb
+++ b/41_4_[PROJETO]_Previsão_de_Demanda_(Time_Series_Forecasting).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0Zmrhj6WeFqLUGT4r6vBt",
+      "authorship_tag": "ABX9TyMx9Hr0FLodgyUZXPHppL4n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,6 +112,113 @@
       ],
       "metadata": {
         "id": "dYtXUY86oqcw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Fatores que Influenciam a Demanda\n",
+        "\n",
+        "Entendendo a importância e o valor que esse tipo de trabalho pode trazer, é hora de começarmos a entender melhor como ele funciona, e com o que ficar atentos para fazer um trabalho minucioso.\n",
+        "\n",
+        "Primeiramente, vamos ter em mente que se trata de um problema de *Séries Temporais*, englobando todos os detalhes que esse tipo de problema traz, como a sazonalidade, atenção se a série é estacionária, etc.\n",
+        "\n",
+        "<center><img alt=\"Vaga\" width=\"40%\" src=\"https://images.unsplash.com/photo-1556742502-ec7c0e9f34b1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80\"></center>\n",
+        "\n",
+        "Fora os detalhes inerentes de séries temporais, é necessário estar atento também a alguns fatores externos, que podem ou não ser alheios aos dados. São eles:\n",
+        "\n",
+        "* **A Competição**\n",
+        "\n",
+        "É muito importante estar atento aos seus competidores dentro do seu ambiente. Se você vende regionalmente para um público da sua região, se é na internet, entenda bem seu contexto, seus competidores e suas ofertas. Sejam novos competidores fortes ou uma nova solução que fazem seus clientes escolher entre você ou eles, é importante ajustar o modelo para que ele te ajude a entender esse movimento e se preparar para ele.\n",
+        "\n",
+        "* **Tipos de Produtos**\n",
+        "\n",
+        "Entender bem o seu tipo de produto, se são perecíveis, delicados, demandam um determinado tipo de armazenamento ou cuidado no transporte, tudo isso deve ser levado em consideração para prever a demanda. Também é muito importante entender o seu Lifetime Value, seu Ticket Médio, e os itens que normalmente são pedidos juntos para entender melhor como agrupar esses produtos, e fazer ofertas ainda melhor para aumentar seu retorno reccorente.\n",
+        "\n",
+        "* **Geografia**\n",
+        "\n",
+        "Aqui, como mencionamos na parte da competição, é importante entender o seu contexto geográfico, mesmo que você trabalhe pela internet, tendo atenção aos desafios logísticos de estoque e de entrega de produtos, dificuldades com transportadores, custos nesse sentido. É vital entender o tempo necessário para receber seu estoque e para entregar suas vendas, e tudo isso também cumpre um papel importante na sua previsão."
+      ],
+      "metadata": {
+        "id": "iaHFPz_zpFCm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Objetivos da Previsão de Demanda\n",
+        "\n",
+        "\n",
+        "<center><img alt=\"Vaga\" width=\"50%\" src=\"https://images.unsplash.com/photo-1543286386-2e659306cd6c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80\"></center>\n",
+        "\n",
+        "Algumas perguntas que esse tipo de trabalho pode responder:\n",
+        "\n",
+        "* Quão rapidamente os produtos estão sendo vendidos.\n",
+        "*  Que itens estão demorando muito para vender.\n",
+        "* Quantos dias de estoque ainda está disponível.\n",
+        "* Onde os seus clientes estão vs de onde você está enviando os produtos\n",
+        "* Rentabilidade por pedido, média de custo de envio e valor médio gasto pelos clientes.\n",
+        "* Status diário de pedidos.\n",
+        "* Como a demanda atual se compara com períodos anteriores.\n",
+        "* Como suas vendas são afetadas pelos diferentes meses e estações.\n",
+        "* Best-Sellers da loja e o quanto eles representam para o seu negócio.\n",
+        "\n",
+        "Entre outras, que podem vir como resultado dos processos investigativos com dados que nos levam a responder essas perguntas."
+      ],
+      "metadata": {
+        "id": "8qQ3SQROpLzg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## O Nosso Projeto\n",
+        "\n",
+        "<center><img alt=\"Vaga\" width=\"50%\" src=\"https://images.unsplash.com/photo-1578911373434-0cb395d2cbfb?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=668&q=80\"></center>\n",
+        "\n",
+        "Aqui, nossa realidade é um pouco diferente. Como foi mencionado um projeto na área ou experiência na indústria do vinho seriam preferíveis, então tentaremos juntar os dois. A grande dificuldade é que conjuntos de dados sobre vinho é difícil de achar. Com venda de vinhos então, mais difícil ainda!!\n",
+        "\n",
+        "Por isso, esses dados são sintéticos, criados por mim para que possamos ter algo mais próximo com a realidade do projeto, mas algumas coisas precisamos levar em consideração:\n",
+        "\n",
+        "* A carta de vinhos, os produtos são reais, baseados na oferta real de um e-commerce de vinhos aqui no Brasil. Nomes, safras, e valores são 100% reais, convertidos pra Dólar para ter um apelo mais internacional.\n",
+        "\n",
+        "* O conjunto de dados de venda é baseado em uma competição no Kaggle. Lá, tínhamos 5 anos de vendas diárias, distribuídas por 10 lojas, com catálogo de 50 produtos. Eu alterei esse conjunto, e agora temos 3 anos de vendas diárias, distribuídos por 3 lojas com 219 produtos diferentes em estoque.\n",
+        "\n",
+        "Como os dados são 100% sintéticos, ou seja, foram fabricados a partir de outro conjunto, tendo sido para a maioria dos itens 100% forjados, isso vai trazer alguns pontos para o projeto:\n",
+        "\n",
+        "* Não vai nos trazer grandes indicativos que refletem a realidade daquele tipo de vinho. Claro que será a realidade do conjunto, mas, por exemplo, às vezes podemos ter que no nosso conjunto os rosés são o tipo de vinho mais vendido, representando apenas menos de 10% do portfólio da empresa, o que não faria sentido. Na realidade, em pouquíssimas regiões do mundo os Rosés seriam os mais vendidos, e se fossem, não teriam uma representativdade tão baixa no portfólio.\n",
+        "\n",
+        "* Podem prejudicar a sazonalidade e intereferir com a previsibilidade dos dados, por terem sido preenchidos de forma não orgânica.\n",
+        "\n",
+        "Outro ponto importante é que alguns dos vinhos no nosso conjunto de dados podem ter registro de vendas antes do seu lançamento. Por exemplo, em Janeiro de 2018 termos registro de vendas de um vinho 2019. Isso acontece, mais uma vez, devido ao nosso conjunto sintético.\n",
+        "\n",
+        "Mais um detalhe que na realidade pode fazer parte de um projeto como esse, é a descontinuidade de um produto. A safra 2015 uma hora vai acabar, e não podemos prever 10 anos de venda de um produto limitado, o que acrescenta mais um desafio nesse projeto. Esse detalhe não será um problema para nós que vamos tentar prever um período curto, mas para um trabalho contínuo, os dados precisam ser revistos com frequência!"
+      ],
+      "metadata": {
+        "id": "HqBc8fMrpQon"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Particularidade do Mundo do Vinho - Business Understanding\n",
+        "\n",
+        "Vinhos são bebidas vivas, que estão em constante evolução, e precisam das condições ideais para que mantenham sua personalidade, e não estraguem.\n",
+        "\n",
+        "Por isso, exigem cuidados especiais com a guarda e o transporte, para que o estoque não se perca, o que torna o objetivo desse projeto ainda mais importante, pois pode fazer mais diferença no lucro da empresa do que algumas outras áreas.\n",
+        "<center><img alt=\"Vaga\" width=\"50%\" src=\"https://images.unsplash.com/photo-1596438214057-5ff7c7fa76b1?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80\"></center>\n",
+        "\n",
+        "\n",
+        "É necessário que se evite a luz solar, também devem ser mantidos em ambiente com certa umidade, mas sem excesso, e em temperatura constante. É mais importante que a temperatura seja constante do que qual é a temperatura. Normalmente o alvo é entre 10 e 15 graus, tendo variedade de acordo com o tipo de vinho.\n",
+        "\n",
+        "Também é importante evitar o movimento, tremores, vibrações, qualquer tipo de perturbação ao líquido, o que nos indica que o gerenciamento de estoque precisa ser feito de forma otimizada, a fim de não mexer nos vinhos mais do que o necessário. Se possível, é recomendado também que sejam mantidos na posição horizontal, o que também pode precisar ser levado em consideração ao planejar o depósito onde os vinhos ficarão.\n",
+        "\n",
+        "Também por isso, precisamos pensar em otimizar a rotatividade, para que o vinho passe o mínimo de tempo possível em uma posição que possa o deteriorar, sendo entregue aos clientes ainda em um estado excelente.\n",
+        "\n",
+        "Apesar de alguns vinhos ficarem sim melhores com o passar dos anos, a grande maioria é feita para consumo \"imediato\", desde o momento em que chegam ao mercado, até no máximo 1 a 3 anos. Por isso, é vital não ficar com vinhos empacados em estoque."
+      ],
+      "metadata": {
+        "id": "UASs8FuppUcc"
       }
     },
     {
