--- a/41_4_[PROJETO]_Previsão_de_Demanda_(Time_Series_Forecasting).ipynb
+++ b/41_4_[PROJETO]_Previsão_de_Demanda_(Time_Series_Forecasting).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFFG0aymORyqpjLuUjFrpA",
+      "authorship_tag": "ABX9TyND1iWUlwPMBLdr7kwc5NcJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -664,12 +664,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "0t4O8oj3pxW0",
-        "outputId": "b23dab16-cf40-4524-df4e-72e1e2afadf6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "0t4O8oj3pxW0",
+        "outputId": "b23dab16-cf40-4524-df4e-72e1e2afadf6"
       },
       "execution_count": 3,
       "outputs": [
@@ -1007,6 +1007,368 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.tail()"
+      ],
+      "metadata": {
+        "id": "EOjsB-_bp7JE",
+        "outputId": "0ac350c5-07de-4d6d-b6a2-30442a896b6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "     item_id                                            name        producer  \\\n",
+              "214      215                          Achaval-Ferrer Quimera  Achaval Ferrer   \n",
+              "215      216                   Achaval-Ferrer Finca Altamira  Achaval Ferrer   \n",
+              "216      217                Achaval-Ferrer Finca Bella Vista  Achaval Ferrer   \n",
+              "217      218                    Achaval-Ferrer Finca Mirador  Achaval Ferrer   \n",
+              "218      219  Achaval-Ferrer Blend De Fincas Edição Limitada  Achaval Ferrer   \n",
+              "\n",
+              "       country   region vintage kind price_brl price_usd  \n",
+              "214  Argentina  Mendoza    2015  red    235.20     40.69  \n",
+              "215  Argentina  Mendoza    2014  red    699.00    120.93  \n",
+              "216  Argentina  Mendoza    2014  red    539.40     93.32  \n",
+              "217  Argentina  Mendoza    2014  red    599.40    103.70  \n",
+              "218  Argentina  Mendoza    2014  red    999.00    172.84  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-6c8f4cac-d8ec-400c-aaa0-6ffca4f2278b\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>item_id</th>\n",
+              "      <th>name</th>\n",
+              "      <th>producer</th>\n",
+              "      <th>country</th>\n",
+              "      <th>region</th>\n",
+              "      <th>vintage</th>\n",
+              "      <th>kind</th>\n",
+              "      <th>price_brl</th>\n",
+              "      <th>price_usd</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>214</th>\n",
+              "      <td>215</td>\n",
+              "      <td>Achaval-Ferrer Quimera</td>\n",
+              "      <td>Achaval Ferrer</td>\n",
+              "      <td>Argentina</td>\n",
+              "      <td>Mendoza</td>\n",
+              "      <td>2015</td>\n",
+              "      <td>red</td>\n",
+              "      <td>235.20</td>\n",
+              "      <td>40.69</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>215</th>\n",
+              "      <td>216</td>\n",
+              "      <td>Achaval-Ferrer Finca Altamira</td>\n",
+              "      <td>Achaval Ferrer</td>\n",
+              "      <td>Argentina</td>\n",
+              "      <td>Mendoza</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>red</td>\n",
+              "      <td>699.00</td>\n",
+              "      <td>120.93</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>216</th>\n",
+              "      <td>217</td>\n",
+              "      <td>Achaval-Ferrer Finca Bella Vista</td>\n",
+              "      <td>Achaval Ferrer</td>\n",
+              "      <td>Argentina</td>\n",
+              "      <td>Mendoza</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>red</td>\n",
+              "      <td>539.40</td>\n",
+              "      <td>93.32</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>217</th>\n",
+              "      <td>218</td>\n",
+              "      <td>Achaval-Ferrer Finca Mirador</td>\n",
+              "      <td>Achaval Ferrer</td>\n",
+              "      <td>Argentina</td>\n",
+              "      <td>Mendoza</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>red</td>\n",
+              "      <td>599.40</td>\n",
+              "      <td>103.70</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>218</th>\n",
+              "      <td>219</td>\n",
+              "      <td>Achaval-Ferrer Blend De Fincas Edição Limitada</td>\n",
+              "      <td>Achaval Ferrer</td>\n",
+              "      <td>Argentina</td>\n",
+              "      <td>Mendoza</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>red</td>\n",
+              "      <td>999.00</td>\n",
+              "      <td>172.84</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6c8f4cac-d8ec-400c-aaa0-6ffca4f2278b')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-6c8f4cac-d8ec-400c-aaa0-6ffca4f2278b button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-6c8f4cac-d8ec-400c-aaa0-6ffca4f2278b');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-92e53bd2-4dae-4a30-84be-de50ea560bd6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-92e53bd2-4dae-4a30-84be-de50ea560bd6')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-92e53bd2-4dae-4a30-84be-de50ea560bd6 button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "repr_error": "0"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Também é importante garantir que não estamos com nenhum dado ausente, e que tudo está no formato que precisamos. Aqui, vou mudar o tipo de alguns dos dados.\n",
+        "\n",
+        "Primeiro, vou transformar o id em string, para que o algoritmo que formos usar depois não tente associar a grandeza do número de id, e não leve isso em consideração. O id é somente para identificar os produtos, o vinho 1 não é melhor nem pior que o 219 levando em consideração o id.\n",
+        "\n",
+        "Além disso, vamos converter para float os valores monetários."
+      ],
+      "metadata": {
+        "id": "XCsQn7JYp9h-"
+      }
     }
   ]
 }
